Refactor model loading strategy.  Separate into LoadingService and ProcessingService.